--- a/index.html
+++ b/index.html
@@ -7,3 +7,51 @@
 
 <widgetbot server="1218958128696266913" channel="1218958392446681129" width="800" height="600"></widgetbot>
 <script src="https://cdn.jsdelivr.net/npm/@widgetbot/html-embed"></script>
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Change Favicon </title>
+  <script>
+    // URL of the image you want to use as the favicon
+    const faviconUrl = 'https://cdn.discordapp.com/attachments/1218331742289789008/1219200915353899059/nicepfp.png?ex=660a7055&is=65f7fb55&hm=fe0a71c7966c0217773be05ce174d5c119427edb9d20a366bac349062b6de1b8';
+
+    // Function to set the favicon
+    function changeFavicon(url) {
+      const link = document.createElement('link');
+      const oldLink = document.querySelector("link[rel*='icon']");
+
+      link.rel = 'shortcut icon';
+      link.href = https://cdn.discordapp.com/attachments/1218331742289789008/1219200915353899059/nicepfp.png?ex=660a7055&is=65f7fb55&hm=fe0a71c7966c0217773be05ce174d5c119427edb9d20a366bac349062b6de1b8;
+
+      if (oldLink) {
+        document.head.removeChild(oldLink);
+      }
+
+      document.head.appendChild(link);
+    }
+
+    // Call the function to change the favicon to the specified URL
+    changeFavicon(faviconUrl);
+  </script>
+</head>
+<body>
+  <!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta property="og:title" content="welcome to carlwasnagi2 website">
+<meta property="og:description" content="Hey! This website was made by carlwasnagi2. This website is an advertising one.join this discord server https://discord.gg/KyHpT4EnqQ and rate this site,*side note* was made using html css and javascript. have a grat day">
+<!-- Add other meta tags for SEO and social sharing -->
+<title>advertising website</title>
+</head>
+<body>
+<!-- Your website content goes here -->
+</body>
+</html>
+</body>
+</html>
+
