--- a/index.html
+++ b/index.html
@@ -1,10 +1,15 @@
 <title>discord server preview
 <script src='https://cdn.jsdelivr.net/npm/@widgetbot/crate@3' async defer>
-	new Crate({
+    new Crate({
         server: '1218958128696266913', // carlwasnagi2 hub
         channel: '1218958392446681129' // #〖💬〗general
     })
 </script>
 
-<widgetbot server="1218958128696266913" channel="1218958392446681129" width="800" height="600"></widgetbot>
+<widgetbot
+    server="1218958128696266913"
+    channel="1218958392446681129"
+    width="800"
+    height="600"
+></widgetbot>
 <script src="https://cdn.jsdelivr.net/npm/@widgetbot/html-embed"></script>
