--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         channel: '1218958392446681129' // #〖💬〗general
     })
 </script>
-
+<div>
 <widgetbot
     server="1218958128696266913"
     channel="1218958392446681129"
