--- a/index.html
+++ b/index.html
@@ -13,3 +13,5 @@
     height="600"
 ></widgetbot>
 <script src="https://cdn.jsdelivr.net/npm/@widgetbot/html-embed"></script>
+
+<link rel="icon" type="image/png" href="nicepfp.png">
